# mallcop

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile.daemon  LICENSE  README.md  SECURITY.md  baseline  corpus.go  corpus_test.go  corpusembed.go  detector-config-drift  detector-dependency-tamper  detector-exfil-pattern  detector-injection-probe  detector-malicious-skill  detector-rate-anomaly  detector-secrets-exposure  detector-unusual-login  exam-seed  go.mod  go.sum  mallcop  mallcop-finding-context  pyproject.toml  run-smoke.sh
.beads/: issues.jsonl
.campfire/: root  root.old
.cf/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.ready/: config.json  sync-state.json
.ready.old/: config.json  mutations.jsonl
capabilities/: deep-investigate.toml.tmpl  escalate.toml.tmpl  heal.toml.tmpl  investigate-merge.toml.tmpl  investigate.toml.tmpl  triage.toml.tmpl
charts/: exam-bakeoff.toml.tmpl  mallcop-automaton.toml.tmpl  mallcop-operational.toml.tmpl  vertical-slice.toml
cli/: cases.go  cases_test.go  collect.go  collect_test.go  config.go  configset.go  configset_test.go  deployrepo.go  deployrepo_test.go  detect.go  detect_config_test.go  detect_test.go  eval.go  eval_test.go  examdetect.go  examdetect_test.go  feedback.go  feedback_test.go  improve.go  improve_test.go  init.go  init_test.go  investigate.go  investigate_baseline_test.go  investigate_gitmailbox_test.go  investigate_test.go  main.go  main_test.go  migrate.go  migrate_test.go  scan.go  scan_config_test.go  scan_e2e_test.go  scan_investigate_test.go  scan_store_git_test.go  scenariocapture.go  (+13 more)
(+1234 files in other folders)
